CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

OPTION(MENGINE_USE_PRECOMPILED_HEADER "Mengine use precompiled header" OFF)

PROJECT(Depends_EMSCRIPTEN)

INCLUDE(../macro_template.cmake)
INCLUDE(../emscripten_template.cmake)

SET(MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../..)
SET(THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies/cmake_scripts)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
    
#ADD_DEFINITIONS(-DSTDEX_UNSUPPOT_NULLPTR_T)

SET(CMAKE_TEMP_DIR ${MENGINE_REPOSITORY}/CMakeTemp/${PROJECT_NAME}/${CMAKE_BUILD_TYPE})

ADD_SUBDIRECTORY(${THIRDPARTY_DIR} ${CMAKE_TEMP_DIR})

