
CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

PROJECT( Depends_IPAD )

INCLUDE( ../ipad_template.cmake )

SET( MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../.. )
SET( THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies/cmake_scripts )

SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} )

SET( CMAKE_TEMP_DIR ${MENGINE_REPOSITORY}/CMakeTemp/Depends_IPAD${CMAKE_BUILD_TYPE} )

ADD_SUBDIRECTORY( ${THIRDPARTY_DIR} ${CMAKE_TEMP_DIR} )
