CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

OPTION(MENGINE_USE_PRECOMPILED_HEADER "Mengine use precompiled header" OFF)

PROJECT(Depends_MinGW)

INCLUDE(../macro_template.cmake)
INCLUDE(../mingw_template.cmake)

SET_MENGINE_ENVIRONMENT(MINGW DIRECTX X86 WIN32 MINGW)

SET(MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../..)
SET(THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

SET(CMAKE_TEMP_DIR ${MENGINE_REPOSITORY}/CMakeTemp/${PROJECT_NAME}/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE})

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies ${CMAKE_TEMP_DIR})

