CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

PROJECT( Depends_SDL32 )

INCLUDE( ../win32_template.cmake )

SET(MENGINE_TARGET_SDL ON)

SET( MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../.. )
SET( THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies )

SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} )

SET( CMAKE_TEMP_DIR ${MENGINE_REPOSITORY}/CMakeTemp/Depends_SDL32/${CMAKE_BUILD_TYPE} )

ADD_SUBDIRECTORY( ${THIRDPARTY_DIR}/cmake_scripts ${CMAKE_TEMP_DIR} )

