CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE(../win32_template.cmake)

PROJECT(Depends_WIN32)

SET(MENGINE_RENDER_OPENGL OFF CACHE BOOL "MENGINE_RENDER_OPENGL" FORCE)
SET(MENGINE_RENDER_DIRECTX ON CACHE BOOL "MENGINE_RENDER_DIRECTX" FORCE)

SET(MENGINE_PLATFORM_WIN32 ON CACHE BOOL "MENGINE_PLATFORM_WIN32" FORCE)
SET(MENGINE_PLATFORM_ANDROID OFF CACHE BOOL "MENGINE_PLATFORM_ANDROID" FORCE)

SET(MENGINE_TARGET_SDL OFF CACHE BOOL "MENGINE_TARGET_SDL" FORCE)
SET(MENGINE_TARGET_GRADLE OFF CACHE BOOL "MENGINE_TARGET_GRADLE" FORCE)
SET(MENGINE_TARGET_MSVC ON CACHE BOOL "MENGINE_TARGET_MSVC" FORCE)
SET(MENGINE_TARGET_MINGW OFF CACHE BOOL "MENGINE_TARGET_MINGW" FORCE)

SET(MENGINE_PLUGIN_SPINE OFF CACHE BOOL "Spine" FORCE)
SET(MENGINE_PLUGIN_TTF ON CACHE BOOL "TTF" FORCE)
SET(MENGINE_PLUGIN_CURL ON CACHE BOOL "CURL" FORCE)

SET(MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../..)
SET(CMAKE_DEPENDENCIES_DIR ${MENGINE_REPOSITORY}/CMake/Dependencies)
SET(THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

SET(CMAKE_TEMP_DIR ${MENGINE_REPOSITORY}/CMakeTemp/Depends_WIN32/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE})

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies ${CMAKE_TEMP_DIR})

