CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

PROJECT( Depends_WIN32_SDL )

INCLUDE( ../win32_sdl_template.cmake )

SET(MENGINE_PLATFORM_WIN32 ON CACHE BOOL "MSVC" FORCE)
SET(MENGINE_TARGET_SDL ON CACHE BOOL "SDL" FORCE)
SET(MENGINE_TARGET_MSVC ON CACHE BOOL "MSVC" FORCE)

SET(MENGINE_PLUGIN_SPINE OFF CACHE BOOL "Spine" FORCE)
SET(MENGINE_PLUGIN_TTF ON CACHE BOOL "TTF" FORCE)
SET(MENGINE_PLUGIN_CURL ON CACHE BOOL "TTF" FORCE)

SET( MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../.. )
SET( THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies )

SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} )

SET( CMAKE_TEMP_DIR ${MENGINE_REPOSITORY}/CMakeTemp/Depends_WIN32_SDL/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE} )

ADD_SUBDIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies ${CMAKE_TEMP_DIR} )

