
CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

PROJECT( Depends_WIN64 )

INCLUDE( ../win64_template.cmake )

SET(MENGINE_RENDER_OPENGL OFF CACHE BOOL "MENGINE_RENDER_OPENGL" FORCE)
SET(MENGINE_RENDER_DIRECTX ON CACHE BOOL "MENGINE_RENDER_DIRECTX" FORCE)

SET(MENGINE_TARGET_MSVC ON)
SET(MENGINE_PLATFORM_WIN64 ON)

SET( MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../.. )
SET( THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies )

SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} )

SET( CMAKE_TEMP_DIR ${MENGINE_REPOSITORY}/CMakeTemp/Depends_WIN64/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE} )

ADD_SUBDIRECTORY( ${THIRDPARTY_DIR}/cmake_scripts ${CMAKE_TEMP_DIR} )

