CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

OPTION(MENGINE_USE_PRECOMPILED_HEADER "Mengine use precompiled header" OFF)

PROJECT(Depends_Xcode_IOS_SDL)

INCLUDE(../macro_template.cmake)
INCLUDE(../xcode_ios_template.cmake)

SET_MENGINE_ENVIRONMENT(IOS OPENGL X64 SDL XCODE)

SET(MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../..)
SET(THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${MENGINE_REPOSITORY}/build_temp/${PROJECT_NAME}/${CMAKE_GENERATOR})
SET(CMAKE_TEMP_DIR ${CMAKE_BINARY_DIR}/Dependencies)

SET(MENGINE_DEPENDENCE_WEBP OFF CACHE BOOL "MENGINE_DEPENDENCE_WEBP" FORCE)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies ${CMAKE_TEMP_DIR})

