CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(Depends_Xcode_IOS_SDL_Simulator)

INCLUDE(../xcode_ios_template.cmake)

SET(MENGINE_RENDER_OPENGL ON CACHE BOOL "MENGINE_RENDER_OPENGL" FORCE)
SET(MENGINE_RENDER_DIRECTX OFF CACHE BOOL "MENGINE_RENDER_DIRECTX" FORCE)

SET(MENGINE_ARCHITECTURE_X86 ON CACHE BOOL "MENGINE_ARCHITECTURE_X86" FORCE)
SET(MENGINE_ARCHITECTURE_X64 OFF CACHE BOOL "MENGINE_ARCHITECTURE_X64" FORCE)

SET(MENGINE_PLATFORM_SDL ON CACHE BOOL "MENGINE_PLATFORM_SDL" FORCE)
SET(MENGINE_PLATFORM_WIN32 OFF CACHE BOOL "MENGINE_PLATFORM_WIN32" FORCE)

SET( MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../.. )
SET( THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies )

SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} )

SET( CMAKE_TEMP_DIR ${MENGINE_REPOSITORY}/CMakeTemp/Depends_Xcode_IOS_SDL_Simulator/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE} )

ADD_SUBDIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies ${CMAKE_TEMP_DIR} )

