CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

PROJECT( Depends_Xcode_SDL )

INCLUDE( ../xcode_template.cmake )

SET(MENGINE_PLATFORM_WIN32 OFF CACHE BOOL "MSVC" FORCE)
SET(MENGINE_PLATFORM_XCODE ON CACHE BOOL "MSVC" FORCE)

SET(MENGINE_TARGET_SDL ON CACHE BOOL "SDL" FORCE)
SET(MENGINE_TARGET_SPINE OFF CACHE BOOL "Spine" FORCE)
SET(MENGINE_PLUGIN_TTF OFF CACHE BOOL "TTF" FORCE)
SET(MENGINE_PLUGIN_CURL OFF CACHE BOOL "TTF" FORCE)

SET( MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../.. )
SET( THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies )

SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} )

SET( CMAKE_TEMP_DIR ${MENGINE_REPOSITORY}/CMakeTemp/Depends_Xcode_SDL/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE} )

ADD_SUBDIRECTORY( ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies ${CMAKE_TEMP_DIR} )

